<resources>
    <string name="app_name">GlucoseMonitor</string>
    <string name="app_subject">Glucose Monitor Entry Report</string>
    <string name="fasting_prompt">Fasting:</string>
    <string name="breakfast_prompt">Breakfast:</string>
    <string name="lunch_prompt">Lunch:</string>
    <string name="dinner_prompt">Dinner:</string>
    <string name="number_hint">Number</string>
    <string name="clear_button_text">Clear</string>
    <string name="history_button_text">History</string>
    <string name="date_overview_label">DATE HERE</string>
    <string name="fasting_label">Fasting:</string>
    <string name="breakfast_label">Breakfast:</string>
    <string name="lunch_label">Lunch:</string>
    <string name="dinner_label">Dinner:</string>
    <string name="new_glucose">Add Glucose Entry</string>
    <string name="delete_glucose">Delete Glucose Entry</string>
    <string name="send_glucose">Send Glucose Entry</string>
    <string name="upload_glucose">Upload Entry to Database</string>
    <string name="toggle_reminder">Start Reminder</string>
    <string name="notification_channel_name">GlucoseReminder</string>
    <string name="missing_entry_title">Missing Glucose Entry</string>
    <string name="missing_entry_text">No glucose entry for today has been input. Tap to create an entry now!</string>
    <string name="reminder_enabled">Disable Reminders</string>
    <string name="reminder_disabled">Enable Reminders</string>
</resources>